--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "preview": "vite preview",
     "test": "vitest",
     "test:watch": "vitest --watch",
-    "test:e2e" : "npx playwright test --ui",
-    "test:e2e:ci" : "npx playwright test"
+    "test:e2e": "npx playwright test --ui",
+    "test:e2e:ci": "npx playwright test"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.9.0",
     "@tailwindcss/vite": "^4.1.13",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
+    "redux-persist": "^6.0.0",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
