--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "preview": "vite preview",
     "test": "vitest",
     "test:watch": "vitest --watch",
-    "test:e2e": "npx playwright test --ui",
-    "test:e2e:ci": "npx playwright test"
+    "test:ete": "pnpm exec playwright test --ui",
+    "test:ete:ci": "pnpm exec playwright test"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
