--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
     "redux-persist": "^6.0.0",
+    "slugify": "^1.6.6",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
     "zod": "^4.1.11"
