--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,8 +29,8 @@ jobs:
       - name: Run unit & integration tests
         run: pnpm test
 
-      - name: Install Playwright browsers
-        run: pnpm exec playwright install --with-deps
+      # - name: Install Playwright browsers
+      #   run: pnpm exec playwright install --with-deps
 
-      - name: Run E2E tests
-        run: pnpm test:ete:ci
+      # - name: Run E2E tests
+      #   run: pnpm test:ete:ci
