--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@reduxjs/toolkit": "^2.9.0",
     "@tailwindcss/vite": "^4.1.13",
     "@tanstack/react-query": "^5.90.1",
+    "@tanstack/react-query-devtools": "^5.91.1",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
